Added quiz functionality the buttons and question label are read from an array

--- a/DepressionApp/Base.lproj/Main.storyboard
+++ b/DepressionApp/Base.lproj/Main.storyboard
@@ -65,8 +65,56 @@
                     <view key="view" contentMode="scaleToFill" id="D3i-hh-2qT">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hs9-cV-Qzc">
+                                <rect key="frame" x="10" y="35" width="580" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xso-ZG-H8W">
+                                <rect key="frame" x="10" y="70.5" width="580" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZu-iB-LuS">
+                                <rect key="frame" x="10" y="160.5" width="580" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nuj-4r-eF8">
+                                <rect key="frame" x="10" y="205.5" width="580" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MvB-Pb-A9n">
+                                <rect key="frame" x="10" y="116" width="580" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Xso-ZG-H8W" firstAttribute="top" secondItem="Hs9-cV-Qzc" secondAttribute="bottom" constant="15" id="0HL-jp-cgp"/>
+                            <constraint firstItem="MvB-Pb-A9n" firstAttribute="leading" secondItem="D3i-hh-2qT" secondAttribute="leading" constant="10" id="15a-rg-ymM"/>
+                            <constraint firstAttribute="trailing" secondItem="Hs9-cV-Qzc" secondAttribute="trailing" constant="10" id="6re-j0-dZI"/>
+                            <constraint firstItem="Hs9-cV-Qzc" firstAttribute="leading" secondItem="D3i-hh-2qT" secondAttribute="leading" constant="10" id="C0q-ag-iQ0"/>
+                            <constraint firstItem="Hs9-cV-Qzc" firstAttribute="top" secondItem="qMY-yg-ZNH" secondAttribute="bottom" constant="15" id="DCZ-WX-UjS"/>
+                            <constraint firstItem="MvB-Pb-A9n" firstAttribute="top" secondItem="Xso-ZG-H8W" secondAttribute="bottom" constant="15" id="F7Y-Dg-UAd"/>
+                            <constraint firstAttribute="trailing" secondItem="nuj-4r-eF8" secondAttribute="trailing" constant="10" id="NFd-DW-5vz"/>
+                            <constraint firstAttribute="trailing" secondItem="Xso-ZG-H8W" secondAttribute="trailing" constant="10" id="OUY-BH-G8W"/>
+                            <constraint firstAttribute="trailing" secondItem="MvB-Pb-A9n" secondAttribute="trailing" constant="10" id="QBS-9c-EGj"/>
+                            <constraint firstItem="nuj-4r-eF8" firstAttribute="leading" secondItem="D3i-hh-2qT" secondAttribute="leading" constant="10" id="c8t-GC-1Zr"/>
+                            <constraint firstItem="Xso-ZG-H8W" firstAttribute="leading" secondItem="D3i-hh-2qT" secondAttribute="leading" constant="10" id="dI6-ok-3EL"/>
+                            <constraint firstAttribute="trailing" secondItem="qZu-iB-LuS" secondAttribute="trailing" constant="10" id="gkc-uI-KJw"/>
+                            <constraint firstItem="nuj-4r-eF8" firstAttribute="top" secondItem="qZu-iB-LuS" secondAttribute="bottom" constant="15" id="lmA-jQ-UvP"/>
+                            <constraint firstItem="qZu-iB-LuS" firstAttribute="top" secondItem="MvB-Pb-A9n" secondAttribute="bottom" constant="15" id="w4Q-qc-3Fo"/>
+                            <constraint firstItem="qZu-iB-LuS" firstAttribute="leading" secondItem="D3i-hh-2qT" secondAttribute="leading" constant="10" id="wWa-Yc-4pS"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="button1" destination="Xso-ZG-H8W" id="zwD-tZ-lgB"/>
+                        <outlet property="button2" destination="MvB-Pb-A9n" id="Cs1-BO-kCO"/>
+                        <outlet property="button3" destination="qZu-iB-LuS" id="RFR-Jf-Nyj"/>
+                        <outlet property="button4" destination="nuj-4r-eF8" id="Ubl-2r-hHo"/>
+                        <outlet property="questionLabel" destination="Hs9-cV-Qzc" id="jf9-J4-4dp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wcb-FN-3H5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
